<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_inicio"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.canudinx.phlnetopac.Inicio"
    android:background="@android:color/darker_gray">

    <Button
        android:text="@string/consulta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="-3dp"
        android:id="@+id/btn_consulta" />

    <Button
        android:id="@+id/btn_conta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-3dp"
        android:layout_weight="3"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/conta"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>
